# MAD-Clean

./: .gitignore  README.md  REFACTOR.md  TESTING.md  __init__.py  bayesian_imaging.md  conftest.py  conv_dict.py  deconvolver.py  design.md  detection.py  filters.py  flow_dict.py  hogbom.py  patch_dict.py  plan.md  psf_utils.py  pyproject.toml  retrain_phase2.sh  solvers.py  train_all.sh  train_patch_dict.py
mad_clean/: __init__.py  _utils.py  deconvolver.py  filters.py  hogbom.py  io.py  normalise.py  psf_utils.py  solvers.py
mad_clean/data/: __init__.py  psf_dataset.py  simulate.py  simulator.py
mad_clean/training/: __init__.py  conv.py  flow.py  latent_flow.py  patch.py  posterior.py  psf_flow.py  vae.py
scripts/: benchmark_deconvolution.py  casa_to_npy.py  catalogue.py  collect_dps_samples.py  collect_z_codes.py  deconvolve.py  eval.py  eval_deconvolution.py  evaluate_morphology.py  extract_psf.py  fetch_crumb.py  generate_psf_data.py  infer_psf_flow.py  inspect_z_codes.py  predict_galaxy.py  reconstruct_crumb.py  reconstruct_ood.py  run_deconvolve.py  run_train.py  simulate.py  simulate_observations.py  smoke_test_flow.py  sweep_patch.py  tarp_test.py  train.py  visualise_uncertainty.py  visualize_atoms.py
tests/: conftest.py  test_deconvolver.py  test_detection.py  test_filters.py  test_hogbom.py  test_io.py  test_psf_utils.py  test_simulator.py  test_solvers.py  test_training.py
