[project]
name            = "mad-clean"
version         = "0.1.0"
description     = "Morphological Atom Decomposition CLEAN — learned sparse-coding minor cycle for radio interferometric imaging"
readme          = "README.md"
requires-python = ">=3.11"

[tool.pixi.project]
channels  = ["pytorch", "conda-forge"]
platforms = ["linux-64"]

[tool.pixi.dependencies]
python       = ">=3.11"
numpy        = ">=1.26"
scipy        = ">=1.12"
scikit-learn = ">=1.4"
astropy      = ">=6.0"
pytest       = ">=8.0"

[tool.pixi.feature.cpu.dependencies]
pytorch  = {version = ">=2.2", channel = "pytorch"}
cpuonly  = {channel = "pytorch"}

[tool.pixi.feature.gpu.dependencies]
pytorch      = {version = ">=2.2",  channel = "pytorch"}
pytorch-cuda = {version = ">=12.1", channel = "pytorch"}

[tool.pixi.environments]
default = {features = ["cpu"], solve-group = "cpu"}
gpu     = {features = ["gpu"], solve-group = "gpu"}

[tool.pixi.tasks]
fetch         = "python scripts/fetch_crumb.py"
train-patch   = "python scripts/run_train.py --variant A --data crumb_data/crumb_preprocessed.npz --out models/cdl_filters_patch.npy"
train-conv    = "python scripts/run_train.py --variant B --data crumb_data/crumb_preprocessed.npz --out models/cdl_filters_conv.npy --k 32 --atom_size 15"
deconvolve-A  = "python scripts/run_deconvolve.py --variant A --dirty dirty.fits --psf psf.fits --atoms models/cdl_filters_patch.npy --out_dir results/"
deconvolve-B  = "python scripts/run_deconvolve.py --variant B --dirty dirty.fits --psf psf.fits --atoms models/cdl_filters_conv.npy --out_dir results/"
test          = "python -m pytest tests/ -v"
